# datastar-soy

./: .gitignore  README.md  app.py  index.html  process.py  pyproject.toml
static/css/: site.css
